welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuit = 0
while(nbBiscuit < 4) {avance();if(estsurbiscuit){nbBiscuit = nbBiscuit + 1}}
